Change all px units to rem

--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,6 @@ Light green: #7ed56f
 Medium green: #55c57a
 Dark green: #28b485
 
-*/
 
 /* selects each and every selector on the page */
 * {
@@ -14,13 +13,18 @@ Dark green: #28b485
   box-sizing: border-box; /* borders and paddings are not added to the total width or height of a box*/
 }
 
+html {
+  font-size: 10px; /* rem unit is always in relation to the root font size, 10px is easier to calculate */
+  /* using rem units is a great practice for responsive websites*/
+}
+
 body {
   font-family: "Lato", sans-serif;
   font-weight: 400;
-  font-size: 16px;
+  font-size: 1.6rem;
   line-height: 1.7; /* 1.7 times bigger than the default line height*/
   color: #777;
-  padding: 30px;
+  padding: 3rem;
 }
 
 .header {
@@ -38,12 +42,12 @@ body {
 
 .logo-box {
   position: absolute;
-  left: 40px; /* parent element is the reference*/
-  top: 40px;
+  left: 4rem; /* parent element is the reference*/
+  top: 4rem;
 }
 
 .logo {
-  height: 35px; /* it's always preferred to control the height of an element over the width */
+  height: 3.5rem; /* it's always preferred to control the height of an element over the width */
 }
 
 .text-box {
@@ -62,9 +66,9 @@ body {
 
 .heading-primary-main {
   display: block;
-  font-size: 60px;
+  font-size: 6rem;
   font-weight: 400;
-  letter-spacing: 35px;
+  letter-spacing: 3.5rem;
   animation-name: moveInLeft;
   animation-duration: 1s;
   animation-timing-function: ease-out;
@@ -74,9 +78,9 @@ body {
 
 .heading-primary-sub {
   display: block;  /* block occupies 100% of the available width and forces a line break*/
-  font-size: 20px;
+  font-size: 2rem;
   font-weight: 700;
-  letter-spacing: 17.4px;
+  letter-spacing: 1.74rem;
   animation-name: moveInRight;
   animation-duration: 1s;
   animation-timing-function: ease-out;
@@ -87,21 +91,22 @@ body {
 .btn:visited {  /* link -> pseudo class that defines a specific state of a selector */
   text-transform: uppercase;
   text-decoration: none;
-  padding: 15px 40px;
+  padding: 1.5rem 4rem;
   display: inline-block;  /* it works as it is a block element, we use this when e want to put heights, paddings or width to an element */ 
-  border-radius: 100px;
+  border-radius: 10rem;
   transition: all .2s;
   position: relative;
+  font-size: 1.6rem;
 }
 
 .btn:hover {
-  transform: translateY(-3px);
-  box-shadow: 0 10px 20px rgba(0,0,0,.2);
+  transform: translateY(-.3rem);
+  box-shadow: 0 1rem 2rem rgba(0,0,0,.2);
 }
 
 .btn:active {
-  transform: translateY(-1px);
-  box-shadow: 0 5px 10px rgba(0,0,0,.2);
+  transform: translateY(-.1rem);
+  box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
 } 
 
 .btn-white {
@@ -114,7 +119,7 @@ body {
   display: inline-block;
   height: 100%;
   width: 100%;
-  border-radius: 100px;
+  border-radius: 10rem;
   position: absolute;
   top: 0;
   left: 0;
@@ -150,11 +155,11 @@ body {
 @keyframes moveInLeft {
   0% {
     opacity: 0;
-    transform: translateX(-100px);
+    transform: translateX(-10rem);
   }
 
   80% {
-    transform: translateX(10px);
+    transform: translateX(1rem);
   }
 
   100% {
@@ -167,11 +172,11 @@ body {
 @keyframes moveInRight {
   0% {
     opacity: 0;
-    transform: translateX(100px);
+    transform: translateX(10rem);
   }
 
   80% {
-    transform: translateX(-10px);
+    transform: translateX(-1rem);
   }
 
   100% {
@@ -184,7 +189,7 @@ body {
 @keyframes moveInButton {
   0% {
     opacity: 0;
-    transform: translateY(30px);
+    transform: translateY(3rem);
   }
 
   100% {
@@ -192,3 +197,12 @@ body {
     transform: translateX(0);
   }
 }
+
+
+/*
+  Responsive design
+    -> one website that works on all screen sizes and devices - standard
+  Writing maintanable and scalable code
+    -> clean, easy to understand, reusable
+  Web performance
+*/
