--- a/css/style.css
+++ b/css/style.css
@@ -7,15 +7,19 @@ Dark green: #28b485
 
 
 /* selects each and every selector on the page */
-* {
+*,
+*::after,
+*::before {
   margin: 0;
   padding: 0;
-  box-sizing: border-box; /* borders and paddings are not added to the total width or height of a box*/
+  box-sizing: inherit; /* borders and paddings are not added to the total width or height of a box*/
 }
 
 html {
-  font-size: 10px; /* rem unit is always in relation to the root font size, 10px is easier to calculate */
-  /* using rem units is a great practice for responsive websites*/
+  font-size: 62.5%; /* rem unit is always in relation to the root font size, 10px is easier to calculate */
+  /* using rem units is a great practice for responsive websites
+    Default browser - 16px  - so we have 62.5% = 10px
+  */
 }
 
 body {
@@ -25,6 +29,7 @@ body {
   line-height: 1.7; /* 1.7 times bigger than the default line height*/
   color: #777;
   padding: 3rem;
+  box-sizing: border-box;
 }
 
 .header {
