--- a/css/style.css
+++ b/css/style.css
@@ -45,17 +45,17 @@ body {
   position: relative; /* specifying the header position as relative means that this is the reference for it's child elements with absolute positioning*/
 }
 
-.logo-box {
+.header__logo-box {
   position: absolute;
   left: 4rem; /* parent element is the reference*/
   top: 4rem;
 }
 
-.logo {
+.header__logo {
   height: 3.5rem; /* it's always preferred to control the height of an element over the width */
 }
 
-.text-box {
+.header__text-box {
   position: absolute;
   top: 40%;
   left: 50%;
@@ -69,7 +69,7 @@ body {
   backface-visibility: hidden;  /*determines if the back part of an element is visible to the user when we transform or animate it*/
 }
 
-.heading-primary-main {
+.heading-primary--main {
   display: block;
   font-size: 6rem;
   font-weight: 400;
@@ -81,7 +81,7 @@ body {
   /*animation-delay: 3s;*/
 }
 
-.heading-primary-sub {
+.heading-primary--sub {
   display: block;  /* block occupies 100% of the available width and forces a line break*/
   font-size: 2rem;
   font-weight: 700;
@@ -114,7 +114,7 @@ body {
   box-shadow: 0 .5rem 1rem rgba(0,0,0,.2);
 } 
 
-.btn-white {
+.btn--white {
   background-color: #fff;
   color: #777;
 }
@@ -132,7 +132,7 @@ body {
   transition: all .4s;
 }
 
-.btn-white::after {
+.btn--white::after {
   background-color: #fff;
 }
 
@@ -141,7 +141,7 @@ body {
   opacity: 0;
 }
 
-.btn-animated {
+.btn--animated {
   animation: moveInButton .5s ease-out .75s;
   animation-fill-mode: backwards; /* applies 0% before animation starts*/
 }
